--- a/shop/src/app/cart/cart.component.css
+++ b/shop/src/app/cart/cart.component.css
@@ -56,9 +56,6 @@
   color: #474747;
   font-size: 0.5em;
 }
-.product-price{
-  margin-left: 30px;
-}
 .product-desc{
   max-width: 150px;
 }
@@ -73,4 +70,7 @@
 .product-amount {
   text-align: end;
   margin-bottom: 0;
+}
+img {
+  border-radius: 5px;
 }
