--- a/shop/src/app/cart/cart.component.html
+++ b/shop/src/app/cart/cart.component.html
@@ -2,23 +2,23 @@
   <div>
     <button class="btn-cart" type="button" (click)="showCart = !showCart">Корзина</button>
     <div class="cart-block" *ngIf="showCart">
-      <p *ngIf="!cart.contents.length">Корзина пуста</p>
-      <div class="cart-item" *ngFor="let cartItem of cart.contents">
+      <p *ngIf="!this.cartService.cart.contents.length">Корзина пуста</p>
+      <div class="cart-item" *ngFor="let cartItem of this.cartService.cart.contents">
         <div class="product-bio">
           <img [src]="img" [alt]="cartItem.product_name">
           <div class="product-desc">
             <p class="product-title">{{cartItem.product_name}}</p>
             <p class="product-quantity">Количество: {{cartItem.quantity}}</p>
-            <p class="product-single-price">$ {{cartItem.price}} 1 шт.</p>
+            <p class="product-single-price">{{cartItem.price}}$ 1 шт.</p>
           </div>
         </div>
         <div class="right-block">
-          <p class="product-price">$ {{cartItem.quantity*cartItem.price}}</p>
-          <button class="del-btn" (click)="remove(cartItem)">&times;</button>
+          <p class="product-price">{{cartItem.quantity*cartItem.price}}$</p>
+          <button class="del-btn" (click)="this.cartService.deleteFromBasket(cartItem)">&times;</button>
         </div>
       </div>
       <div class="cart-bottom">
-        <p class="product-amount" *ngIf="cart.contents.length">Итого: $ {{cart.amount}}</p>
+        <p class="product-amount" *ngIf="this.cartService.cart.contents.length">Итого: {{this.cartService.cart.amount}}$</p>
       </div>
 
     </div>
