--- a/shop/src/app/page/home-page/home-page.component.css
+++ b/shop/src/app/page/home-page/home-page.component.css
@@ -1,25 +1,19 @@
 .welcome{
+  margin-top: 120px;
   font-size: 2rem;
   text-align: center;
 }
-.primary{
-  display: flex;
-  justify-content: space-around;
-  border: 1px solid #2f2a2d;
-  width: 800px;
-  height: 400px;
-  margin: 80px auto;
-  align-items: center;
-  border-radius: 10px;
-}
-.primary_block{
 
-  background-color: #2f2a2d;
-  width: 200px;
-  height: 120px;
-  border-radius: 10px;
-  color: #fafafa;
-  text-align: center;
-  line-height: 120px;
-  font-size: 2rem;
+.btn {
+  display: inline-block;
+  padding: 5px 10px;
+
+  transition: all ease-in-out .4s;
 }
+.btn:hover {
+  color: darkorange;
+  transform: scale(1.2);
+  cursor: pointer;
+
+}
+
