--- a/shop/src/app/search/search.component.css
+++ b/shop/src/app/search/search.component.css
@@ -28,6 +28,7 @@ input::-moz-placeholder { color: #fafafa; }
 }
 .btn-search{
   transition: all ease-in-out .4s;
+  cursor: pointer;
 
 }
 .btn-search:hover{
