--- a/testProject/src/app/map/map.component.html
+++ b/testProject/src/app/map/map.component.html
@@ -1,5 +1,6 @@
 <div class="map-container">
   <div class="map-frame">
-    <div id="map" (focusin)="focusMarker($event)" (focusout)="blurMarker($event)"></div>
+    <div id="map" ></div>
   </div>
 </div>
+
