--- a/testProject/src/app/app.component.css
+++ b/testProject/src/app/app.component.css
@@ -1,17 +1,14 @@
-#mapid { height: 180px; }
-
-.container {
+img {
+  width: 200px;
+  height: 120px;
+}
+aside {
   display: flex;
-  justify-content: space-around;
-  margin: 0 auto;
-  width: 900px;
+  flex-direction: column;
+  align-items: center;
 
-}
-.block{
-  display: inline-block;
-  padding: 20px 30px;
-  border: 2px solid black;
-}
-.active {
-  background-color: #59ef59;
+  background-color: azure;
+  border: 2px solid #009bff;
+  width: 300px;
+  height: 100vh;
 }
