--- a/testProject/src/app/map/map.component.css
+++ b/testProject/src/app/map/map.component.css
@@ -1,14 +1,15 @@
 .map-container {
   position: absolute;
-  top: 150px;
-  left: 0;
+  top: 0px;
+  left: 300px;
   right: 0;
   bottom: 0;
-  margin: 30px;
+
 }
 
+
 .map-frame {
-  border: 2px solid black;
+  border: 2px solid #009bff;
   height: 100%;
 }
 
