--- a/testProject/src/styles.css
+++ b/testProject/src/styles.css
@@ -4,3 +4,10 @@
 .marker-active {
   filter: invert(120%);
 }
+.leaflet-div-icon {
+  background: none;
+  border: none;
+}
+body {
+  margin: 0;
+}
