--- a/testProject/src/app/app.component.html
+++ b/testProject/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!--  <div class="logo">-->
 <!--    <img src="https://svgsilh.com/svg/158348-3f51b5.svg" alt="logo">-->
 <!--  </div>-->
-  <app-map-control ></app-map-control>
+  <app-map-control [filteredArr]="this.service.filteredArr"></app-map-control>
 </aside>
 
-<app-map [activatedId]="this.service.activatedId" [removeId]="this.service.removeId" [newMarker]="this.service.newMarker"></app-map>
+<app-map [activatedId]="this.service.activatedId" [removeId]="this.service.removeId" [newMarker]="this.service.newMarker" [filteredArr]="this.service.filteredArr"></app-map>
