--- a/testProject/src/app/app.component.css
+++ b/testProject/src/app/app.component.css
@@ -1,14 +1,21 @@
-img {
-  width: 200px;
-  height: 120px;
-}
 aside {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   background-color: azure;
-
   width: 350px;
   height: 100vh;
+}
+img {
+  height: 120px;
+}
+.logo {
+  display: flex;
+  justify-content: space-between;
+}
+.logo-text {
+  width: 78px;
+  padding-left: 10px;
+  font-weight: bold;
+  font-size: 18px;
 }
