--- a/testProject/src/app/map-control/map-control.component.css
+++ b/testProject/src/app/map-control/map-control.component.css
@@ -9,9 +9,9 @@
   justify-content: space-between;
   padding: 16px 0;
   align-items: center;
-
 }
-.radio, .radio-label {
+.radio,
+.radio-label {
   cursor: pointer;
 }
 .filter-input {
@@ -22,10 +22,10 @@
   display: flex;
   align-items: center;
 }
- input {
-   height: 16px;
-   margin: 0;
- }
+input {
+  height: 16px;
+  margin: 0;
+}
 .marker-box {
   overflow: auto;
   height: 30vh;
@@ -33,7 +33,7 @@
 }
 .marker {
   cursor: pointer;
-  transition: color ease-in-out .4s;
+  transition: color ease-in-out 0.4s;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,13 +48,13 @@
 .marker-text {
   max-width: 250px;
   padding: 4px 0;
-  outline:none;
+  outline: none;
 }
 .btn {
   cursor: pointer;
   height: 15px;
   border-radius: 50%;
-  transition: all ease-in-out .4s;
+  transition: all ease-in-out 0.4s;
 }
 .btn:hover {
   transform: scale(1.2);
@@ -69,7 +69,5 @@ button {
   padding: 4px 8px;
 }
 img {
-
   height: 15px;
 }
-
