--- a/testProject/src/app/app.component.html
+++ b/testProject/src/app/app.component.html
@@ -8,14 +8,7 @@
       <p>Leaflet Map Application</p>
     </div>
   </div>
-  <app-map-control
-    [filteredArr]="this.markerService.filteredArr"
-  ></app-map-control>
+  <app-map-control></app-map-control>
 </aside>
 
-<app-map
-  [activatedId]="this.markerService.activatedId"
-  [removeId]="this.markerService.removeId"
-  [newMarker]="this.markerService.newMarker"
-  [filteredArr]="this.markerService.filteredArr"
-></app-map>
+<app-map></app-map>
