--- a/testProject/src/app/app.component.html
+++ b/testProject/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ng-template appRef></ng-template>
 <aside>
   <div class="logo">
     <img
@@ -9,6 +10,7 @@
     </div>
   </div>
   <app-map-control></app-map-control>
+  <button (click)="showModalCreate()">Создать маркер</button>
 </aside>
 
 <app-map></app-map>
