--- a/testProject/src/app/app.component.css
+++ b/testProject/src/app/app.component.css
@@ -5,6 +5,7 @@ aside {
   background-color: azure;
   width: 350px;
   height: 100vh;
+
 }
 img {
   height: 120px;
@@ -18,4 +19,10 @@ img {
   padding-left: 10px;
   font-weight: bold;
   font-size: 18px;
+}
+button {
+
+  border-radius: 5px;
+  margin-top: 20px;
+  padding: 4px 12px;
 }
